# coaches

./: .gitignore
doc/: AgendaPartnerUseCases.tex  COACHES_deliverables.xlsx  README.txt
doc/D11/: D11.tex
doc/D31/: D311.tex  D311_GUI.tex  D311_intro.tex  D311_speech.tex  D311_usecases.tex  D312.tex
doc/D41/: D41.tex
doc/D42/: D42.tex  D42_Caen_Sapienza.blg  D42_Caen_Sapienza.tex  MDP_PNP_integration.tex  TR_Tasks3-4.tex  TR_WP1.tex
doc/D43/: D43.tex  D43b_Caen_Sapienza.tex  MDP_PNP_integration.tex
doc/D51/: D51.tex  D51_Sapienza.tex
doc/D52/: D52.tex  D52_Sapienza.tex  D52_main.tex  D52b_Tasks_Dialogues.tex  DELIVRABLES_D5.2.aux  DELIVRABLES_D5.2.tex  UseCases_Sapienza.tex  conclu.tex  demo.tex  usecases.tex
doc/D53/: D53.bib  D53.tex  D53_comm.tex  D53_design.tex  D53_robots.tex
doc/KickOffMeeting/: KO-meeting-DoW.tex
doc/fig/: coaches-new-figure.pptx  logoCHISTERA2014.eps  logoUniCaen.eps
doc/papers/15-AIIA/: AI.tex  coaches.bib  conclu.tex  impl.tex  intro.tex  main.tex  swarch.tex
doc/papers/15-AIIA/fig/: pruDiag.dot
doc/papers/15-ICSR/: abstract.tex  coaches.tex  conclu.tex  implementation.tex  intro.tex  main.tex  refs.bib  related.tex  relwork.tex  reviews.txt  system.tex
doc/papers/15-RSS_aicogscirobo2015/: MDP_PNP.tex  conclu.tex  intro.tex  main.tex  references.bib  relwork.tex
software/: README.txt
software/GUI/: GUI_DIAG  README.txt
software/GUI/QAGUI/: QAGUI.py  image_office  image_schedule  image_toilets  instance  parse_rules_file.py  text_adminroom  text_goodbye  text_needhelp  text_office  text_schedule  text_toilets  text_whichhelp  toilets  welcome
software/launch/: PRUplanner2.launch  README.txt  __diagoDIAGPrinter.launch  __run_diago_printer_demo.sh  create_world.sh  diagoDIAGPrinter.launch  diago_all.launch  joyevent.py  modules.launch  robot_navigation.launch  run_diago_DIAG_demo_pnp.sh  run_diago_DIAG_demo_pru.sh  run_diago_printer_demo.sh  run_printer_demo.sh  run_sim_DIAG_demo_pnp.sh  run_sim_DIAG_demo_pru.sh  run_sim_printer_demo_pnp.sh  run_sim_printer_demo_pru.sh  rviz.launch  sim.launch  simDIAGPrinter.launch  simWithMock.launch  simWithModules.launch  sim_diago_DIAG.launch  sim_environment.launch  sim_printer_PRU.sh
software/ros/: full.launch  modules.launch
software/ros/catkin_ws/: Makefile  initialize.bash  setup.bash
software/ros/catkin_ws/src/hello_coaches_developers/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/hello_coaches_developers/src/: hello.cpp
software/ros/catkin_ws/src/shared/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/shared/msg/: AllGoals.msg  Event.msg  Feature.msg  Goal.msg
software/ros/catkin_ws/src/t11_kb_modeling/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t11_kb_modeling/include/t11_kb_modeling/: knowledgeKind.h
software/ros/catkin_ws/src/t11_kb_modeling/msg/: Knowledge.msg
software/ros/catkin_ws/src/t11_kb_modeling/src/: T11.cpp  T11.h  main.cpp  mockModel.cpp
software/ros/catkin_ws/src/t11_kb_modeling/srv/: GetAllSites.srv  GetLocation.srv
software/ros/catkin_ws/src/t12_kb_reasoning/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t12_kb_reasoning/src/: T12.cpp  T12.h  main.cpp  mockSites.cpp
software/ros/catkin_ws/src/t12_kb_reasoning/srv/: GetLocation.srv
software/ros/catkin_ws/src/t21_image_processing/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t21_image_processing/src/: T21.cpp  T21.h  main.cpp  mockPeople.cpp
software/ros/catkin_ws/src/t22_situation_awareness/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t22_situation_awareness/src/: T22.cpp  T22.h  main.cpp
software/ros/catkin_ws/src/t31_multimodal_hri/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t31_multimodal_hri/msg/: HRIActuation.msg
software/ros/catkin_ws/src/t32_human_needs_estimation/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t41_robust_navigation/: CMakeLists.txt  package.xml
software/ros/catkin_ws/src/t42_multi_robot_planning/: CMakeLists.txt  package.xml
src/: README.txt
src/ros/: README.txt
src/ros/catkin_ws/: README.txt  initialize.bash
src/ros/catkin_ws/src/hello_coaches_developers/: CMakeLists.txt
(+62 files in other folders)
