<?xml version="1.0"?>
<package>
  <name>t21_image_processing</name>
  <version>0.0.1</version>
  <description>Realtime sensor, image and video processing</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="hichem.sahli@etro.vub.ac.be">Hichem Sahli</maintainer>
  <maintainer email="frederic.jurie@unicaen.fr">Frederic Jurie</maintainer>
  <maintainer email="iocchi@dis.uniroma1.it">Luca Iocchi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>CeCILL-C</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://forge.greyc.fr/projects/coaches</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="hichem.sahli@etro.vub.ac.be">Hichem Sahli</author>
  <author email="frederic.jurie@unicaen.fr">Frederic Jurie</author>
  <author email="iocchi@dis.uniroma1.it">Luca Iocchi</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
